# event-store-db

./: Cargo.toml  README.md  docker-compose.yml
src/: event_store_commands.rs  main.rs
