[package]
name = "event-store-db"
version = "0.0.0"
publish = false
edition = "2021"

[dev-dependencies]
futures = "0.3"
uuid = { version  = "1.1", features = [ "v4", "serde" ] }
serde = "1"

[dependencies]
futures = "0.3.30"
serde = "1.0.195"
uuid = "1.6.1"
tokio = { version = "1.35.1", features = ["full"] }
eventstore = { version = "2.3.0" }